--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "Add page to tab",
-  "version": "1.1",
-  "permissions": [
-    "tabs", "http://*/*", "https://*/*"
-  ],
-  "description": "Facebook Add Page To Tab",
-  "browser_action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html"
-  },
+  "name": "Facebook Easy Add Page Tab",
+  "version": "1.0.0",
+  "description": "Extension that makes Facebook Apps' Add Page Tab a One-click action",
   "content_scripts": [ {
       "css": [ "addpagetotab.css" ],
       "js": [ "jquery.js", "addpagetotab.js" ],
